<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"

        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:enabled="false"
        android:maxLines="1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"

        android:background="@color/lightgrey"
        android:text=""
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"

        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <RadioGroup
        android:id="@+id/selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radioButton"

            android:text="@string/excelente"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radioButton"

            android:text="@string/bueno"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radioButton"

            android:text="@string/malo"
            />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/seleccion"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:id="@+id/padRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton"
                style="@style/padButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/borrar" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/padRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_7"
                style="@style/padButton"
                android:text="@string/_7" />

            <Button
                android:id="@+id/_8"
                style="@style/padButton"
                android:text="@string/_8" />

            <Button
                android:id="@+id/_9"
                style="@style/padButton"
                android:text="@string/_9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/padRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_4"
                style="@style/padButton"
                android:text="@string/_4" />

            <Button
                android:id="@+id/_5"
                style="@style/padButton"
                android:text="@string/_5" />

            <Button
                android:id="@+id/_6"
                style="@style/padButton"
                android:text="@string/_6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/padRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_1"
                style="@style/padButton"
                android:text="@string/_1" />

            <Button
                android:id="@+id/_2"
                style="@style/padButton"
                android:text="@string/_2" />

            <Button
                android:id="@+id/_3"
                style="@style/padButton"
                android:text="@string/_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/padRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/coma"
                style="@style/padButton"
                android:text="@string/comma" />

            <Button
                android:id="@+id/_0"
                style="@style/padButton"
                android:text="@string/_0" />

            <Button
                style="@style/padButton"
                android:background="@color/transparent"
                app:strokeColor="@color/transparent"
                android:text=""
                android:enabled="false"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="0dp"

        android:backgroundTint="@color/darkBlue"
        android:text="@string/calcular"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:cornerRadius="0dp"

         />

</androidx.constraintlayout.widget.ConstraintLayout>